name:                owm
version:             0.1.0.0
synopsis:            Interface to the openweathermap API.
description:         Please see README.md
homepage:            https://github.com/githubuser/perf#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Mayer
maintainer:          mmayer@mayeranalytics.com
copyright:           Mayer Analytics
category:            Network, Cloud, OWM
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   Network.Owm.Weather, Network.Owm.Forecast, Network.Owm.ForecastDaily, Network.Owm
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , wreq
                     , lens
                     , json-autotype
                     , HTTP
                     , text
                     , http-types
                     , clock
                     , time
  other-modules:       Network.Owm.Internal.Weather
                     , Network.Owm.Internal.Forecast
                     , Network.Owm.Internal.ForecastDaily
  default-language:    Haskell2010

executable test-owm
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -O2 -threaded
  build-depends:       base
                     , owm
                     , bytestring
                     , HTTP
                     , MissingH
                     , aeson
                     , json-autotype
                     , text
                     , lens
  default-language:    Haskell2010


executable get-json-examples
  hs-source-dirs:      .
  main-is:             GetJsonExamples.hs
  ghc-options:         -O2 -threaded
  build-depends:       base
                     , bytestring
                     , wreq
                     , lens
                     , mtl
                     , MissingH
  default-language:    Haskell2010
